--- a/index.html
+++ b/index.html
@@ -2642,188 +2642,190 @@ Can be used in the footer.</p>
                   <svg><use xlink:href="#icon-copy"></use></svg>
                 </i>
               </button>
-              <code><pre id="sections-filter-section-code-sample-copy-chunk">&lt;div class="filter-header"&gt;
-  &lt;hr class="push-quarter">
+              <code><pre id="sections-filter-section-code-sample-copy-chunk">&lt;div class="filter-section"&gt;
+  &lt;div class="filter-header">
+    &lt;hr class="push-quarter">
 
-  &lt;div class="filter-options clearfix">
-    &lt;div class="island-quarter inline-block right">
+    &lt;div class="filter-options clearfix">
+      &lt;div class="island-quarter inline-block right">
 
-      &lt;div class="filter-option-1 island-quarter gutter-double inline-block">
-        &lt;a class="drop-button-brand bold" href="#">Brands&lt;/a>
-        &lt;div class="dropdown-content-brand">
-          &lt;div class="block">
-            &lt;input type="checkbox" id="brand-check1">
-            &lt;label class="gutter-half bold" for="brand-check1">Friut&lt;/label>
-          &lt;/div>
-          &lt;div class="block">
-            &lt;input type="checkbox" id="brand-check2">
-            &lt;label class="gutter-half bold" for="brand-check2">Suop&lt;/label>
-          &lt;/div>
-          &lt;div class="block">
-            &lt;input type="checkbox" id="brand-check3">
-            &lt;label class="gutter-half bold" for="brand-check3">Ceka&lt;/label>
+        &lt;div class="filter-option-1 island-quarter gutter-double inline-block">
+          &lt;a class="drop-button-brand bold" href="#">Brands&lt;/a>
+          &lt;div class="dropdown-content-brand">
+            &lt;div class="block">
+              &lt;input type="checkbox" id="brand-check1">
+              &lt;label class="gutter-half bold" for="brand-check1">Friut&lt;/label>
+            &lt;/div>
+            &lt;div class="block">
+              &lt;input type="checkbox" id="brand-check2">
+              &lt;label class="gutter-half bold" for="brand-check2">Suop&lt;/label>
+            &lt;/div>
+            &lt;div class="block">
+              &lt;input type="checkbox" id="brand-check3">
+              &lt;label class="gutter-half bold" for="brand-check3">Ceka&lt;/label>
+            &lt;/div>
           &lt;/div>
         &lt;/div>
-      &lt;/div>
 
-      &lt;div class="filter-option-2 island-quarter gutter-double inline-block">
-        &lt;a class="drop-button-type bold" href="#">Clothing type&lt;/a>
-        &lt;div class="dropdown-content-type">
-          &lt;div class="block">
-            &lt;input type="checkbox" id="type-check1">
-            &lt;label class="gutter-half bold " for="type-check1">Jackets&lt;/label>
-          &lt;/div>
-          &lt;div class="block">
-            &lt;input type="checkbox" id="type-check2">
-            &lt;label class="gutter-half bold " for="type-check2">Pants&lt;/label>
-          &lt;/div>
-          &lt;div class="block">
-            &lt;input type="checkbox" id="type-check3">
-            &lt;label class="gutter-half bold " for="type-check3">Sweaters&lt;/label>
-          &lt;/div>
-          &lt;div class="block">
-            &lt;input type="checkbox" id="type-check4">
-            &lt;label class="gutter-half bold " for="type-check4">Skirts&lt;/label>
-          &lt;/div>
-          &lt;div class="block">
-            &lt;input type="checkbox" id="type-check5">
-            &lt;label class="gutter-half bold " for="type-check5">Tops&lt;/label>
+        &lt;div class="filter-option-2 island-quarter gutter-double inline-block">
+          &lt;a class="drop-button-type bold" href="#">Clothing type&lt;/a>
+          &lt;div class="dropdown-content-type">
+            &lt;div class="block">
+              &lt;input type="checkbox" id="type-check1">
+              &lt;label class="gutter-half bold " for="type-check1">Jackets&lt;/label>
+            &lt;/div>
+            &lt;div class="block">
+              &lt;input type="checkbox" id="type-check2">
+              &lt;label class="gutter-half bold " for="type-check2">Pants&lt;/label>
+            &lt;/div>
+            &lt;div class="block">
+              &lt;input type="checkbox" id="type-check3">
+              &lt;label class="gutter-half bold " for="type-check3">Sweaters&lt;/label>
+            &lt;/div>
+            &lt;div class="block">
+              &lt;input type="checkbox" id="type-check4">
+              &lt;label class="gutter-half bold " for="type-check4">Skirts&lt;/label>
+            &lt;/div>
+            &lt;div class="block">
+              &lt;input type="checkbox" id="type-check5">
+              &lt;label class="gutter-half bold " for="type-check5">Tops&lt;/label>
+            &lt;/div>
           &lt;/div>
         &lt;/div>
-      &lt;/div>
 
+
+      &lt;/div>
 
     &lt;/div>
+    &lt;hr class="push-quarter">
 
   &lt;/div>
-  &lt;hr class="push-quarter">
 
-&lt;/div>
+  &lt;div class="products-banner">
+    &lt;div class="grid pad-top">
+      &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-1">
+        &lt;div>
+          &lt;img class="img-flex product-1" src="../../images/img-1.jpg" aria-label="Image of girl in white sweater" alt="">
+        &lt;/div>
+        &lt;div class="grid pad-top-half">
+          &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+            &lt;p class="milli bold product-name-1">VANILLA SWEATER&lt;/p>
+          &lt;/div>
+          &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+            &lt;p class="milli bold right product-price-1">$32&lt;/p>
+          &lt;/div>
+        &lt;/div>
+      &lt;/div>
 
-&lt;div class="products-banner">
-  &lt;div class="grid pad-top">
-    &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-1">
-      &lt;div>
-        &lt;img class="img-flex product-1" src="../../images/img-1.jpg" aria-label="Image of girl in white sweater" alt="">
-      &lt;/div>
-      &lt;div class="grid pad-top-half">
-        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
-          &lt;p class="milli bold product-name-1">VANILLA SWEATER&lt;/p>
+      &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-2">
+        &lt;div>
+          &lt;img class="img-flex product-2" src="../../images/img-2.jpg" aria-label="Image of girl in BLUE sweater" alt="">
         &lt;/div>
-        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
-          &lt;p class="milli bold right product-price-1">$32&lt;/p>
+        &lt;div class="grid pad-top-half">
+          &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+            &lt;p class="milli bold product-name-2">BLUE CHEESE SWEATER&lt;/p>
+          &lt;/div>
+          &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+            &lt;p class="milli bold right product-price-2">$49&lt;/p>
+          &lt;/div>
         &lt;/div>
       &lt;/div>
-    &lt;/div>
 
-    &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-2">
-      &lt;div>
-        &lt;img class="img-flex product-2" src="../../images/img-2.jpg" aria-label="Image of girl in BLUE sweater" alt="">
-      &lt;/div>
-      &lt;div class="grid pad-top-half">
-        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
-          &lt;p class="milli bold product-name-2">BLUE CHEESE SWEATER&lt;/p>
+      &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-3">
+        &lt;div>
+          &lt;img class="img-flex product-3" src="../../images/img-3.jpg" aria-label="Image of girl in white sweater" alt="">
         &lt;/div>
-        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
-          &lt;p class="milli bold right product-price-2">$49&lt;/p>
+        &lt;div class="grid pad-top-half">
+          &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+            &lt;p class="milli bold product-name-3">ORANGE BLOUSE&lt;/p>
+          &lt;/div>
+          &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+            &lt;p class="milli bold right product-price-3">$46&lt;/p>
+          &lt;/div>
         &lt;/div>
       &lt;/div>
-    &lt;/div>
 
-    &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-3">
-      &lt;div>
-        &lt;img class="img-flex product-3" src="../../images/img-3.jpg" aria-label="Image of girl in white sweater" alt="">
-      &lt;/div>
-      &lt;div class="grid pad-top-half">
-        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
-          &lt;p class="milli bold product-name-3">ORANGE BLOUSE&lt;/p>
+      &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-4">
+        &lt;div>
+          &lt;img class="img-flex product-3" src="../../images/img-4.jpg" aria-label="Image of girl in white sweater" alt="">
         &lt;/div>
-        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
-          &lt;p class="milli bold right product-price-3">$46&lt;/p>
+        &lt;div class="grid pad-top-half">
+          &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+            &lt;p class="milli bold product-name-4">VANILLA SWEATER&lt;/p>
+          &lt;/div>
+          &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+            &lt;p class="milli bold right product-price-4">$79&lt;/p>
+          &lt;/div>
         &lt;/div>
       &lt;/div>
-    &lt;/div>
 
-    &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-4">
-      &lt;div>
-        &lt;img class="img-flex product-3" src="../../images/img-4.jpg" aria-label="Image of girl in white sweater" alt="">
-      &lt;/div>
-      &lt;div class="grid pad-top-half">
-        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
-          &lt;p class="milli bold product-name-4">VANILLA SWEATER&lt;/p>
+      &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-5">
+        &lt;div>
+          &lt;img class="img-flex product-3" src="../../images/img-5.jpg" aria-label="Image of girl in white sweater" alt="">
         &lt;/div>
-        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
-          &lt;p class="milli bold right product-price-4">$79&lt;/p>
+        &lt;div class="grid pad-top-half">
+          &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+            &lt;p class="milli bold product-name-5">WHITE ROUND-NECK&lt;/p>
+          &lt;/div>
+          &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+            &lt;p class="milli bold right product-price-5">$36&lt;/p>
+          &lt;/div>
         &lt;/div>
       &lt;/div>
-    &lt;/div>
 
-    &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-5">
-      &lt;div>
-        &lt;img class="img-flex product-3" src="../../images/img-5.jpg" aria-label="Image of girl in white sweater" alt="">
-      &lt;/div>
-      &lt;div class="grid pad-top-half">
-        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
-          &lt;p class="milli bold product-name-5">WHITE ROUND-NECK&lt;/p>
+      &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-6">
+        &lt;div>
+          &lt;img class="img-flex product-3" src="../../images/img-6.jpg" aria-label="Image of girl in white sweater" alt="">
         &lt;/div>
-        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
-          &lt;p class="milli bold right product-price-5">$36&lt;/p>
+        &lt;div class="grid pad-top-half">
+          &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+            &lt;p class="milli bold product-name-6">CREAMY MUSHROOM TOP&lt;/p>
+          &lt;/div>
+          &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+            &lt;p class="milli bold right product-price-6">$68&lt;/p>
+          &lt;/div>
         &lt;/div>
       &lt;/div>
-    &lt;/div>
 
-    &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-6">
-      &lt;div>
-        &lt;img class="img-flex product-3" src="../../images/img-6.jpg" aria-label="Image of girl in white sweater" alt="">
-      &lt;/div>
-      &lt;div class="grid pad-top-half">
-        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
-          &lt;p class="milli bold product-name-6">CREAMY MUSHROOM TOP&lt;/p>
+      &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-7">
+        &lt;div>
+          &lt;img class="img-flex product-3" src="../../images/img-7.jpg" aria-label="Image of girl in white sweater" alt="">
         &lt;/div>
-        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
-          &lt;p class="milli bold right product-price-6">$68&lt;/p>
+        &lt;div class="grid pad-top-half">
+          &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+            &lt;p class="milli bold product-name-7">B&amp;W TOP&lt;/p>
+          &lt;/div>
+          &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+            &lt;p class="milli bold right product-price-7">$42&lt;/p>
+          &lt;/div>
         &lt;/div>
       &lt;/div>
-    &lt;/div>
 
-    &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-7">
-      &lt;div>
-        &lt;img class="img-flex product-3" src="../../images/img-7.jpg" aria-label="Image of girl in white sweater" alt="">
-      &lt;/div>
-      &lt;div class="grid pad-top-half">
-        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
-          &lt;p class="milli bold product-name-7">B&amp;W TOP&lt;/p>
+      &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-8">
+        &lt;div>
+          &lt;img class="img-flex product-3" src="../../images/img-8.jpg" aria-label="Image of girl in white sweater" alt="">
         &lt;/div>
-        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
-          &lt;p class="milli bold right product-price-7">$42&lt;/p>
+        &lt;div class="grid pad-top-half">
+          &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+            &lt;p class="milli bold product-name-8">MOCHA SWEATER&lt;/p>
+          &lt;/div>
+          &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+            &lt;p class="milli bold right product-price-8">$72&lt;/p>
+          &lt;/div>
         &lt;/div>
       &lt;/div>
-    &lt;/div>
 
-    &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-8">
-      &lt;div>
-        &lt;img class="img-flex product-3" src="../../images/img-8.jpg" aria-label="Image of girl in white sweater" alt="">
-      &lt;/div>
-      &lt;div class="grid pad-top-half">
-        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
-          &lt;p class="milli bold product-name-8">MOCHA SWEATER&lt;/p>
+      &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-9">
+        &lt;div>
+          &lt;img class="img-flex product-3" src="../../images/img-9.jpg" aria-label="Image of girl in white sweater" alt="">
         &lt;/div>
-        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
-          &lt;p class="milli bold right product-price-8">$72&lt;/p>
-        &lt;/div>
-      &lt;/div>
-    &lt;/div>
-
-    &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-9">
-      &lt;div>
-        &lt;img class="img-flex product-3" src="../../images/img-9.jpg" aria-label="Image of girl in white sweater" alt="">
-      &lt;/div>
-      &lt;div class="grid pad-top-half">
-        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
-          &lt;p class="milli bold product-name-9">TIRAMISU SWEATER&lt;/p>
-        &lt;/div>
-        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
-          &lt;p class="milli bold right product-price-9">$119&lt;/p>
+        &lt;div class="grid pad-top-half">
+          &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+            &lt;p class="milli bold product-name-9">TIRAMISU SWEATER&lt;/p>
+          &lt;/div>
+          &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+            &lt;p class="milli bold right product-price-9">$119&lt;/p>
+          &lt;/div>
         &lt;/div>
       &lt;/div>
     &lt;/div>
