--- a/patterns/sections/filter-section.html
+++ b/patterns/sections/filter-section.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+  <div class="filter-section">
   <div class="filter-header">
     <hr class="push-quarter">
 
@@ -214,9 +215,9 @@
       </div>
     </div>
   </div>
+</div>
 
-  <script src="sections.js">
-  </script>
+  <script src="sections.js"></script>
 </body>
 
 </html>
