Add checkboxes to filter
Filter options were given checkboxes

--- a/index.html
+++ b/index.html
@@ -2650,7 +2650,8 @@ Can be used in the footer.</p>
       &lt;div class="island-quarter inline-block right">
 
         &lt;div class="filter-option-1 island-quarter gutter-double inline-block">
-          &lt;a class="drop-button-brand bold" href="#">Brands&lt;/a>
+          &lt;input type="checkbox" class="brand-check" id="brands">
+          &lt;label class="gutter-half bold brand-label" for="brands">Brands&lt;/label>
           &lt;div class="dropdown-content-brand">
             &lt;div class="block">
               &lt;input type="checkbox" id="brand-check1">
@@ -2668,7 +2669,8 @@ Can be used in the footer.</p>
         &lt;/div>
 
         &lt;div class="filter-option-2 island-quarter gutter-double inline-block">
-          &lt;a class="drop-button-type bold" href="#">Clothing type&lt;/a>
+          &lt;input type="checkbox" class="type-check" id="type">
+          &lt;label class="gutter-half bold type-label" for="type">Clothing type&lt;/label>
           &lt;div class="dropdown-content-type">
             &lt;div class="block">
               &lt;input type="checkbox" id="type-check1">
