--- a/patterns/sections/filter-section.html
+++ b/patterns/sections/filter-section.html
@@ -23,7 +23,8 @@
       <div class="island-quarter inline-block right">
 
         <div class="filter-option-1 island-quarter gutter-double inline-block">
-          <a class="drop-button-brand bold" href="#">Brands</a>
+            <input type="checkbox" class="brand-check" id="brands">
+            <label class="gutter-half bold brand-label" for="brands">Brands</label>
             <div class="dropdown-content-brand">
               <div class="block">
                 <input type="checkbox" id="brand-check1">
@@ -41,7 +42,8 @@
           </div>
 
         <div class="filter-option-2 island-quarter gutter-double inline-block">
-          <a class="drop-button-type bold" href="#">Clothing type</a>
+            <input type="checkbox" class="type-check" id="type">
+            <label class="gutter-half bold type-label" for="type">Clothing type</label>
             <div class="dropdown-content-type">
               <div class="block">
                 <input type="checkbox" id="type-check1">
