Add the description to the README
The README file was added

--- a/pages/product-list-page.html
+++ b/pages/product-list-page.html
@@ -7,8 +7,16 @@
   <script src="../common/patternbot.js"></script>
 </head>
 <body>
-  <script type="application/json" data-pattern="header/header"></script>
-  <script type="application/json" data-pattern="sections/filter-section"></script>
+  <script type="application/json" data-pattern="header/header">
+  {
+    ".current[class]": "tera text-center yellow"
+  }
+  </script>
+  <script type="application/json" data-pattern="sections/filter-section">
+    {
+
+    }
+  </script>
   <script type="application/json" data-pattern="footer/main-footer"></script>
 
 </body>
