--- a/patterns/sections/filter-section.html
+++ b/patterns/sections/filter-section.html
@@ -22,7 +22,7 @@
     <div class="filter-options clearfix">
       <div class="island-quarter inline-block right">
 
-        <div class="filter-option-1 island-quarter gutter-double inline-block">
+        <div class="filter-option-1 island-quarter gutter inline-block">
             <input type="checkbox" class="brand-check" id="brands">
             <label class="gutter-half bold brand-label" for="brands">Brands</label>
             <div class="dropdown-content-brand">
@@ -41,7 +41,7 @@
             </div>
           </div>
 
-        <div class="filter-option-2 island-quarter gutter-double inline-block">
+        <div class="filter-option-2 island-quarter gutter inline-block">
             <input type="checkbox" class="type-check" id="type">
             <label class="gutter-half bold type-label" for="type">Clothing type</label>
             <div class="dropdown-content-type">
