--- a/index.html
+++ b/index.html
@@ -2434,6 +2434,8 @@ Can be used in the footer.</p>
 <p>The product collections section are to be used only in the product collections page. The layout consists of cards that can be used to represent the collections in the e-commerce site.</p>
 <p>Products section</p>
 <p>The Products sections are to be used in the product page. It consists of reviews, description and recommended section, to urge the users to buy more, and to provide a detailed description of the product.</p>
+<p>Products with filter section</p>
+<p>The Products with filter section are to be used in the product page. It consists of product images, price and name. Filter options based on clothing type and brands are provided to help the user efficiently filter products.</p>
 </div>
     </div>
 
@@ -2649,7 +2651,7 @@ Can be used in the footer.</p>
     &lt;div class="filter-options clearfix">
       &lt;div class="island-quarter inline-block right">
 
-        &lt;div class="filter-option-1 island-quarter gutter-double inline-block">
+        &lt;div class="filter-option-1 island-quarter gutter inline-block">
           &lt;input type="checkbox" class="brand-check" id="brands">
           &lt;label class="gutter-half bold brand-label" for="brands">Brands&lt;/label>
           &lt;div class="dropdown-content-brand">
@@ -2668,7 +2670,7 @@ Can be used in the footer.</p>
           &lt;/div>
         &lt;/div>
 
-        &lt;div class="filter-option-2 island-quarter gutter-double inline-block">
+        &lt;div class="filter-option-2 island-quarter gutter inline-block">
           &lt;input type="checkbox" class="type-check" id="type">
           &lt;label class="gutter-half bold type-label" for="type">Clothing type&lt;/label>
           &lt;div class="dropdown-content-type">
