Add ID tags for navigation
ID's for navigation was added. Z-index for navigationw as fixed

--- a/patterns/header/header.html
+++ b/patterns/header/header.html
@@ -29,9 +29,9 @@
           <svg class="i-32 close"><use xlink:href="../../images/icons.svg#close" aria-label="Toggle navigation close icon" /></svg>
         </label>
         <ul class="nav list-group island">
-          <li class="list-group-item text-center pad-t-1-2"><a aria-label="Click for women's clothing" class="tera text-center yellow current" href="#">Women</a></li>
-          <li class="list-group-item text-center pad-top-half"><a aria-label="Click for men's clothing" class="tera text-center yellow" href="#">Men</a></li>
-          <li class="list-group-item text-center pad-top-half"><a aria-label="Click for gender neutral clothing" class="tera text-center yellow" href="#">Gender Bender</a></li>
+          <li class="list-group-item text-center pad-t-1-2"><a aria-label="Click for women's clothing" class="tera text-center yellow current" href="../sections/filter-section.html#women">Women</a></li>
+          <li class="list-group-item text-center pad-top-half"><a aria-label="Click for men's clothing" class="tera text-center yellow" href="../sections/filter-section.html#men">Men</a></li>
+          <li class="list-group-item text-center pad-top-half"><a aria-label="Click for gender neutral clothing" class="tera text-center yellow" href="../sections/filter-section.html#genderbender">Gender Bender</a></li>
           <li class="list-group-item text-center pad-top-half"><a aria-label="Click for accessories" class="tera text-center yellow" href="#">Accessories</a></li>
           <li class="list-group-item text-center pad-top-half"><a aria-label="Click for the list of brands" class="tera text-center yellow" href="#">Brands</a></li>
           <li class="list-group-item text-center pad-top-half"><a aria-label="Click to go to the cart" class="tera text-center yellow" href="#">Cart</a></li>
