--- a/patterns/sections/filter-section.html
+++ b/patterns/sections/filter-section.html
@@ -28,15 +28,15 @@
             <div class="dropdown-content-brand">
               <div class="block">
                 <input type="checkbox" id="brand-check1">
-                <label class="gutter-half bold" for="brand-check1">Friut</label>
+                <label class="gutter-half bold milli inline-block" for="brand-check1">Friut</label>
               </div>
               <div class="block">
                 <input type="checkbox" id="brand-check2">
-                <label class="gutter-half bold" for="brand-check2">Suop</label>
+                <label class="gutter-half bold milli inline-block" for="brand-check2">Suop</label>
               </div>
               <div class="block">
                 <input type="checkbox" id="brand-check3">
-                <label class="gutter-half bold" for="brand-check3">Ceka</label>
+                <label class="gutter-half bold milli inline-block" for="brand-check3">Ceka</label>
               </div>
             </div>
           </div>
@@ -47,40 +47,26 @@
             <div class="dropdown-content-type">
               <div class="block">
                 <input type="checkbox" id="type-check1">
-                <label class="gutter-half bold " for="type-check1">Jackets</label>
+                <label class="gutter-half bold milli inline-block" for="type-check1">Jackets</label>
               </div>
               <div class="block">
                 <input type="checkbox" id="type-check2">
-                <label class="gutter-half bold " for="type-check2">Pants</label>
+                <label class="gutter-half bold milli inline-block" for="type-check2">Pants</label>
               </div>
               <div class="block">
                 <input type="checkbox" id="type-check3">
-                <label class="gutter-half bold " for="type-check3">Sweaters</label>
+                <label class="gutter-half bold milli inline-block" for="type-check3">Sweaters</label>
               </div>
               <div class="block">
                 <input type="checkbox" id="type-check4">
-                <label class="gutter-half bold " for="type-check4">Skirts</label>
+                <label class="gutter-half bold milli inline-block" for="type-check4">Skirts</label>
               </div>
               <div class="block">
                 <input type="checkbox" id="type-check5">
-                <label class="gutter-half bold " for="type-check5">Tops</label>
+                <label class="gutter-half bold milli inline-block" for="type-check5">Tops</label>
               </div>
             </div>
           </div>
-
-          <!-- <div class="filter-option-3 island-quarter gutter-double inline-block">
-            <a class="drop-button bold" href="#">Relevance</a>
-              <div class="dropdown-content">
-                <div class="block">
-                  <input type="checkbox" id="price-check1">
-                  <label class="gutter-half bold" for="price-check1">&lt;50</label>
-                </div>
-                <div class="block">
-                  <input type="checkbox" id="price-check2">
-                  <label class="gutter-half bold" for="price-check2">&gt;50</label>
-                </div>
-              </div>
-            </div> -->
           </div>
 
       </div>
@@ -91,6 +77,7 @@
   <div class="products-banner">
     <div class="grid pad-top">
       <div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-1">
+        <div id="women">
         <div>
           <img class="img-flex product-1" src="../../images/img-1.jpg" aria-label="Image of girl in white sweater" alt="">
         </div>
@@ -103,8 +90,10 @@
           </div>
         </div>
       </div>
+      </div>
 
       <div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-2">
+        <div id="women">
         <div>
           <img class="img-flex product-2" src="../../images/img-2.jpg" aria-label="Image of girl in BLUE sweater" alt="">
         </div>
@@ -117,8 +106,10 @@
           </div>
         </div>
       </div>
+      </div>
 
       <div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-3">
+        <div id="women">
         <div>
           <img class="img-flex product-3" src="../../images/img-3.jpg" aria-label="Image of girl in white sweater" alt="">
         </div>
@@ -131,8 +122,10 @@
           </div>
         </div>
       </div>
+      </div>
 
       <div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-4">
+        <div id="women">
         <div>
           <img class="img-flex product-3" src="../../images/img-4.jpg" aria-label="Image of girl in white sweater" alt="">
         </div>
@@ -145,8 +138,10 @@
           </div>
         </div>
       </div>
+      </div>
 
       <div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-5">
+        <div id="men">
         <div>
           <img class="img-flex product-3" src="../../images/img-5.jpg" aria-label="Image of girl in white sweater" alt="">
         </div>
@@ -159,22 +154,26 @@
           </div>
         </div>
       </div>
+      </div>
 
       <div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-6">
+        <div id="genderbender">
         <div>
           <img class="img-flex product-3" src="../../images/img-6.jpg" aria-label="Image of girl in white sweater" alt="">
         </div>
         <div class="grid pad-top-half">
           <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
-            <p class="milli bold product-name-6">CREAMY MUSHROOM TOP</p>
+            <p class="milli bold product-name-6">BLUEBERRY JEANS</p>
           </div>
           <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
             <p class="milli bold right product-price-6">$68</p>
           </div>
         </div>
       </div>
+      </div>
 
       <div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-7">
+        <div id="genderbender">
         <div>
           <img class="img-flex product-3" src="../../images/img-7.jpg" aria-label="Image of girl in white sweater" alt="">
         </div>
@@ -187,8 +186,10 @@
           </div>
         </div>
       </div>
+      </div>
 
       <div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-8">
+        <div id="women">
         <div>
           <img class="img-flex product-3" src="../../images/img-8.jpg" aria-label="Image of girl in white sweater" alt="">
         </div>
@@ -201,8 +202,10 @@
           </div>
         </div>
       </div>
+      </div>
 
       <div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-9">
+        <div id="women">
         <div>
           <img class="img-flex product-3" src="../../images/img-9.jpg" aria-label="Image of girl in white sweater" alt="">
         </div>
@@ -214,6 +217,7 @@
             <p class="milli bold right product-price-9">$119</p>
           </div>
         </div>
+      </div>
       </div>
     </div>
   </div>
