Changes in form patterns
Changes to include classes were made

--- a/patterns/buttons/buttons.html
+++ b/patterns/buttons/buttons.html
@@ -13,9 +13,17 @@
 </head>
 <body>
 
-  <a class="btn kilo bold" href="#">Standard button</a>
-  <a class="btn btn-light kilo bold" href="#">Light button</a>
-  <a class="btn btn-ghost kilo bold" href="#">Ghost button</a>
+<div class="button-styles text-center">
+  <div class="std-button island">
+    <a class="btn kilo bold" href="#">Standard button</a>
+  </div>
+  <div class="light-button island">
+    <a class="btn btn-light kilo bold" href="#">Light button</a>
+  </div>
+  <div class="ghost-button island">
+    <a class="btn btn-ghost kilo bold" href="#">Ghost button</a>
+  </div>
+</div>
 
 </body>
 </html>
