--- a/patterns/forms/date-picker.html
+++ b/patterns/forms/date-picker.html
@@ -17,12 +17,14 @@
 <body>
 
   <form>
+    <div class="date-picker push-1-2">
     <label for="date">Date</label>
     <input type="date" id="date" required aria-describedby="date-error">
     <p class="error-message milli island-1-4 push-0" id="date-error">
       <i class="icon i-16"><svg><use xlink:href="../../images/icons.svg#warning" /></svg></i>
       <span class="icon-label">Enter correct details. The format should be year, month, date</span>
     </p>
+  </div>
   </form>
 
 </body>
