--- a/patterns/forms/number.html
+++ b/patterns/forms/number.html
@@ -17,12 +17,14 @@
 <body>
 
   <form>
-    <label for="tel">Phone no.</label>
-    <input type="tel" id="tel" required aria-describedby="tel-error">
-    <p class="error-message milli island-1-4 push-0" id="tel-error">
+    <div class="number push-1-2">
+    <label for="number">Number</label>
+    <input type="number" id="number" required aria-describedby="num-error">
+    <p class="error-message milli island-1-4 push-0" id="num-error">
       <i class="icon i-16"><svg><use xlink:href="../../images/icons.svg#warning" /></svg></i>
       <span class="icon-label">Enter phone number without space.</span>
     </p>
+  </div>
   </form>
 
 </body>
