--- a/patterns/forms/range.html
+++ b/patterns/forms/range.html
@@ -17,11 +17,13 @@
 <body>
 
   <form>
+    <div class="range push-1-2">
     <input type="range" name="points" min="0" max="10" aria-describedby="range-error">
     <p class="error-message milli island-1-4 push-0" id="range-error">
       <i class="icon i-16"><svg><use xlink:href="../../images/icons.svg#warning" /></svg></i>
       <span class="icon-label">Enter appropriate range value</span>
     </p>
+  </div>
   </form>
 
 </body>
