--- a/patterns/forms/drop-down.html
+++ b/patterns/forms/drop-down.html
@@ -14,16 +14,22 @@
 </head>
 <body>
   <form>
-    <select name="text" id="drop-down" aria-describedby="drop-down-error">
-      <option value="option-1">Option 1</option>
-      <option value="option-2">Option 2</option>
-      <option value="option-3">Option 3</option>
-      <option value="option-4">Option 4</option>
+    <div class="drop-down-style">
+      <label for="drop-down">Drop Down List</label>
+    <select class="drop-down" name="text" id="drop-down" aria-describedby="drop-down-error">
+      <option>Option-1</option>
+      <option>Option-2</option>
+      <option>Option-3</option>
+      <option>Option-4</option>
+      <option>Option-5</option>
+      <option>Option-6</option>
+      <option>Option-7</option>
     </select>
     <p class="error-message milli" id="drop-down-error">
       <i class="icon i-16"><svg><use xlink:href="../../images/icons.svg#warning" /></svg></i>
       <span class="icon-label">You can select only one option</span>
     </p>
+  </div>
   </form>
 
 </body>
