--- a/patterns/forms/email.html
+++ b/patterns/forms/email.html
@@ -16,7 +16,7 @@
 
 <body>
   <form>
-    <div class="email">
+    <div class="email push-1-2">
       <label for="email">Email</label>
       <input type="email" id="email" required aria-describedby="email-error">
       <p class="error-message milli island-1-4 push-0" id="email-error">
