--- a/patterns/header/header.html
+++ b/patterns/header/header.html
@@ -17,7 +17,7 @@
 
   <main class="header clearfix">
     <div class="logo left">
-        <a class="inline-block" href="#">
+        <a class="inline-block" href="home.html">
           <img class="island main-logo" src="../../images/logo-64.svg" aria-label="Logo of the brand" alt="">
         </a>
     </div>
@@ -29,9 +29,9 @@
           <svg class="i-32 close"><use xlink:href="../../images/icons.svg#close" aria-label="Toggle navigation close icon" /></svg>
         </label>
         <ul class="nav list-group island">
-          <li class="list-group-item text-center pad-t-1-2"><a aria-label="Click for women's clothing" class="tera text-center yellow current" href="../sections/filter-section.html#women">Women</a></li>
-          <li class="list-group-item text-center pad-top-half"><a aria-label="Click for men's clothing" class="tera text-center yellow" href="../sections/filter-section.html#men">Men</a></li>
-          <li class="list-group-item text-center pad-top-half"><a aria-label="Click for gender neutral clothing" class="tera text-center yellow" href="../sections/filter-section.html#genderbender">Gender Bender</a></li>
+          <li class="list-group-item text-center pad-t-1-2"><a aria-label="Click for women's clothing" class="tera text-center yellow current" href="product-list-page.html#women">Women</a></li>
+          <li class="list-group-item text-center pad-top-half"><a aria-label="Click for men's clothing" class="tera text-center yellow" href="product-list-page.html#men">Men</a></li>
+          <li class="list-group-item text-center pad-top-half"><a aria-label="Click for gender neutral clothing" class="tera text-center yellow" href="product-list-page.html#genderbender">Gender Bender</a></li>
           <li class="list-group-item text-center pad-top-half"><a aria-label="Click for accessories" class="tera text-center yellow" href="#">Accessories</a></li>
           <li class="list-group-item text-center pad-top-half"><a aria-label="Click for the list of brands" class="tera text-center yellow" href="#">Brands</a></li>
           <li class="list-group-item text-center pad-top-half"><a aria-label="Click to go to the cart" class="tera text-center yellow" href="#">Cart</a></li>
