--- a/patterns/sections/reviews.html
+++ b/patterns/sections/reviews.html
@@ -15,70 +15,25 @@
 </head>
 
 <body>
-  <section class="reviews">
+  <div class="reviews">
     <h6 class="bold push-quarter">REVIEWS</h6>
     <hr class="push-quarter">
-
-    <div class="push-double">
-      <div class="one-five-star" aria-label="Rating 1/5 stars">
-        <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#full-review" /></svg></i>
-        <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#review-star" /></svg></i>
-        <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#review-star" /></svg></i>
-        <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#review-star" /></svg></i>
-        <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#review-star" /></svg></i>
-      </div>
+    <div class="one-star inline-block" aria-label="one stars">
+      <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#full-review" /></svg></i>
     </div>
-
-    <div class="push-double">
-      <div class="two-five-star" aria-label="Rating 2/5 stars">
-        <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#full-review" /></svg></i>
-        <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#full-review" /></svg></i>
-        <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#review-star" /></svg></i>
-        <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#review-star" /></svg></i>
-        <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#review-star" /></svg></i>
-      </div>
+    <div class="zero-star inline-block" aria-label="zero stars">
+      <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#review-star" /></svg></i>
     </div>
-
-    <div class="push-double">
-      <div class="three-five-star" aria-label="Rating 3/5 stars">
-        <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#full-review" /></svg></i>
-        <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#full-review" /></svg></i>
-        <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#full-review" /></svg></i>
-        <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#review-star" /></svg></i>
-        <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#review-star" /></svg></i>
-      </div>
+    <div class="half-star inline-block" aria-label="half stars">
+      <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#half-review" /></svg></i>
     </div>
-
-    <div class="push-double" aria-label="Rating 4/5 stars">
-      <div class="four-five-star">
-        <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#full-review" /></svg></i>
-        <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#full-review" /></svg></i>
-        <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#full-review" /></svg></i>
-        <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#full-review" /></svg></i>
-        <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#review-star" /></svg></i>
-      </div>
+    <div class="half-star inline-block" aria-label="half stars">
+      <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#half-review" /></svg></i>
     </div>
-
-    <div class="push-double" aria-label="Rating 5/5 stars">
-      <div class="five-five-star">
-        <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#full-review" /></svg></i>
-        <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#full-review" /></svg></i>
-        <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#full-review" /></svg></i>
-        <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#full-review" /></svg></i>
-        <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#full-review" /></svg></i>
-      </div>
+    <div class="half-star inline-block" aria-label="half stars">
+      <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#half-review" /></svg></i>
     </div>
-
-    <div class="push-double" aria-label="Rating 0/5 stars">
-      <div class="zero-five-star">
-        <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#review-star" /></svg></i>
-        <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#review-star" /></svg></i>
-        <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#review-star" /></svg></i>
-        <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#review-star" /></svg></i>
-        <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#review-star" /></svg></i>
-      </div>
-    </div>
-  </section>
+  </div>
 </body>
 
 </html>
