--- a/patterns/sections/colour-picker.html
+++ b/patterns/sections/colour-picker.html
@@ -19,10 +19,10 @@
   <section class="colour">
     <div class="grid text-center push-none">
       <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4">
-        <a class="bold micro push-quarter black" href="#">BROWN</a>
+        <a class="colour-1 bold micro push-quarter black" href="#">BROWN</a>
       </div>
       <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4">
-        <a class="bold micro push-quarter black" href="#">WHITE</a>
+        <a class="colour-2 bold micro push-quarter black" href="#">WHITE</a>
       </div>
     </div>
   </section>
