--- a/patterns/sections/products.html
+++ b/patterns/sections/products.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Product Section</title>
+  <title>Products in cart Section</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="../../common/modules.css" rel="stylesheet">
   <link href="../../common/grid.css" rel="stylesheet">
@@ -16,48 +16,23 @@
 </head>
 
 <body>
-  <div class="products-banner">
-    <div class="grid pad-top">
-      <div class="unit xs-1 s-1 m-1-2 l-1-3 island-half">
-        <div>
-          <img class="img-flex product-1" src="../../images/img-1.jpg" aria-label="Image of girl in white sweater" alt="">
-        </div>
-        <div class="grid pad-top-half">
-          <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
-            <p class="milli bold product-name-1">VANILLA SWEATER</p>
-          </div>
-          <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
-            <p class="milli bold right product-price-1">$32</p>
-          </div>
+  <div class="products-cart relative">
+    <input type="checkbox" class="cart-product" id="cart-product-close">
+    <label class="cart-product-label island-half absolute pin-cr" for="cart-product-close">
+      <svg class="i-16 close-icon"><use xlink:href="../../images/icons.svg#close" /></svg>
+    </label>
+    <div class="cart">
+      <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4 island-quarter">
+        <div class="product-img" aria-label="Image of product in cart">
+          <i class="icon i-64">
+            <img class="img-flex" src="../../images/img-1.jpg">
+          </i>
         </div>
       </div>
-
-      <div class="unit xs-1 s-1 m-1-2 l-1-3 island-half">
-        <div>
-          <img class="img-flex product-2" src="../../images/img-2.jpg" aria-label="Image of girl in BLUE sweater" alt="">
-        </div>
-        <div class="grid pad-top-half">
-          <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
-            <p class="milli bold product-name-2">BLUE CHEESE SWEATER</p>
-          </div>
-          <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
-            <p class="milli bold right product-price-2">$49</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="unit xs-1 s-1 m-1-2 l-1-3 island-half">
-        <div>
-          <img class="img-flex product-3" src="../../images/img-3.jpg" aria-label="Image of girl in white sweater" alt="">
-        </div>
-        <div class="grid pad-top-half">
-          <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
-            <p class="milli bold product-name-3">VANILLA SWEATER</p>
-          </div>
-          <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
-            <p class="milli bold right product-price-3">$32</p>
-          </div>
-        </div>
+      <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2 island-quarter">
+        <p class="push-0 milli">VANILLA SWEATER</p>
+        <label class="milli" for="number"></label>
+        <input type="number" id="number" required>
       </div>
     </div>
   </div>
