--- a/patterns/sections/filter-section.html
+++ b/patterns/sections/filter-section.html
@@ -79,7 +79,9 @@
       <div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-1">
         <div id="women">
         <div>
-          <img class="img-flex product-1" src="../../images/img-1.jpg" aria-label="Image of girl in white sweater" alt="">
+          <a class="product-1" href="product-details-page.html#product-one">
+            <img class="img-flex" src="../../images/img-1.jpg" aria-label="Image of girl in white sweater" alt="">
+          </a>
         </div>
         <div class="grid pad-top-half">
           <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
@@ -95,7 +97,9 @@
       <div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-2">
         <div id="women">
         <div>
-          <img class="img-flex product-2" src="../../images/img-2.jpg" aria-label="Image of girl in BLUE sweater" alt="">
+          <a class="product-2" href="product-details-page.html#product-one">
+            <img class="img-flex" src="../../images/img-2.jpg" aria-label="Image of girl in BLUE sweater" alt="">
+          </a>
         </div>
         <div class="grid pad-top-half">
           <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
@@ -111,7 +115,9 @@
       <div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-3">
         <div id="women">
         <div>
-          <img class="img-flex product-3" src="../../images/img-3.jpg" aria-label="Image of girl in white sweater" alt="">
+          <a class="product-3" href="product-details-page.html#product-one">
+            <img class="img-flex" src="../../images/img-3.jpg" aria-label="Image of girl in white sweater" alt="">
+          </a>
         </div>
         <div class="grid pad-top-half">
           <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
@@ -127,7 +133,9 @@
       <div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-4">
         <div id="women">
         <div>
-          <img class="img-flex product-3" src="../../images/img-4.jpg" aria-label="Image of girl in white sweater" alt="">
+          <a class="product-4" href="product-details-page.html#product-one">
+            <img class="img-flex" src="../../images/img-4.jpg" aria-label="Image of girl in white sweater" alt="">
+          </a>
         </div>
         <div class="grid pad-top-half">
           <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
@@ -143,7 +151,9 @@
       <div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-5">
         <div id="men">
         <div>
-          <img class="img-flex product-3" src="../../images/img-5.jpg" aria-label="Image of girl in white sweater" alt="">
+          <a class="product-5" href="product-details-page.html#product-one">
+            <img class="img-flex" src="../../images/img-5.jpg" aria-label="Image of girl in white sweater" alt="">
+          </a>
         </div>
         <div class="grid pad-top-half">
           <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
@@ -159,7 +169,9 @@
       <div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-6">
         <div id="genderbender">
         <div>
-          <img class="img-flex product-3" src="../../images/img-6.jpg" aria-label="Image of girl in white sweater" alt="">
+          <a class="product-6" href="product-details-page.html#product-one">
+            <img class="img-flex" src="../../images/img-6.jpg" aria-label="Image of girl in white sweater" alt="">
+          </a>
         </div>
         <div class="grid pad-top-half">
           <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
@@ -175,7 +187,9 @@
       <div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-7">
         <div id="genderbender">
         <div>
-          <img class="img-flex product-3" src="../../images/img-7.jpg" aria-label="Image of girl in white sweater" alt="">
+          <a class="product-7" href="product-details-page.html#product-one">
+            <img class="img-flex" src="../../images/img-7.jpg" aria-label="Image of girl in white sweater" alt="">
+          </a>
         </div>
         <div class="grid pad-top-half">
           <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
@@ -191,7 +205,9 @@
       <div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-8">
         <div id="women">
         <div>
-          <img class="img-flex product-3" src="../../images/img-8.jpg" aria-label="Image of girl in white sweater" alt="">
+          <a class="product-8" href="product-details-page.html#product-one">
+            <img class="img-flex" src="../../images/img-8.jpg" aria-label="Image of girl in white sweater" alt="">
+          </a>
         </div>
         <div class="grid pad-top-half">
           <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
@@ -207,7 +223,9 @@
       <div class="unit xs-1 s-1 m-1-2 l-1-3 island-half" id="img-9">
         <div id="women">
         <div>
-          <img class="img-flex product-3" src="../../images/img-9.jpg" aria-label="Image of girl in white sweater" alt="">
+          <a class="product-9" href="product-details-page.html#product-one">
+            <img class="img-flex" src="../../images/img-9.jpg" aria-label="Image of girl in white sweater" alt="">
+          </a>
         </div>
         <div class="grid pad-top-half">
           <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
