Update the product list page and header page
The product list page and header page were updated

--- a/patterns/header/header.html
+++ b/patterns/header/header.html
@@ -32,9 +32,7 @@
           <li class="list-group-item text-center pad-t-1-2"><a aria-label="Click for women's clothing" class="tera text-center yellow current" href="product-list-page.html#women">Women</a></li>
           <li class="list-group-item text-center pad-top-half"><a aria-label="Click for men's clothing" class="tera text-center yellow" href="product-list-page.html#men">Men</a></li>
           <li class="list-group-item text-center pad-top-half"><a aria-label="Click for gender neutral clothing" class="tera text-center yellow" href="product-list-page.html#genderbender">Gender Bender</a></li>
-          <li class="list-group-item text-center pad-top-half"><a aria-label="Click for accessories" class="tera text-center yellow" href="#">Accessories</a></li>
-          <li class="list-group-item text-center pad-top-half"><a aria-label="Click for the list of brands" class="tera text-center yellow" href="#">Brands</a></li>
-          <li class="list-group-item text-center pad-top-half"><a aria-label="Click to go to the cart" class="tera text-center yellow" href="#">Cart</a></li>
+          <li class="list-group-item text-center pad-top-half"><a aria-label="Click to go to the cart" class="tera text-center yellow" href="checkout-form.html">Cart</a></li>
 
         </ul>
       </nav>
