Add a class to numbers
A class was added to numbers section of the form

--- a/index.html
+++ b/index.html
@@ -1966,7 +1966,7 @@ It is generally used for account creation, log in, payment gateway access.</p>
               </button>
               <code><pre id="forms-number-code-sample-copy-chunk">&lt;form&gt;
   &lt;div class="number push-1-2">
-    &lt;label for="number">Number&lt;/label>
+    &lt;label class="kilo" for="number">Number&lt;/label>
     &lt;input type="number" id="number" required aria-describedby="num-error">
     &lt;p class="error-message milli island-1-4 push-0" id="num-error">
       &lt;i class="icon i-16">&lt;svg>&lt;use xlink:href="../../images/icons.svg#warning"/>&lt;/svg>&lt;/i>
