--- a/patterns/forms/number.html
+++ b/patterns/forms/number.html
@@ -18,7 +18,7 @@
 
   <form>
     <div class="number push-1-2">
-    <label for="number">Number</label>
+    <label class="kilo" for="number">Number</label>
     <input type="number" id="number" required aria-describedby="num-error">
     <p class="error-message milli island-1-4 push-0" id="num-error">
       <i class="icon i-16"><svg><use xlink:href="../../images/icons.svg#warning" /></svg></i>
