Fix the indentation issues
Indentation issues were fixed

--- a/pages/checkout-form.html
+++ b/pages/checkout-form.html
@@ -14,7 +14,7 @@
       ".current[class]": "tera text-center yellow"
     }
   </script>
-  <main classs="main" role="main">
+  <main class="main" role="main">
     <div class="grid">
       <div class="unit xs-1 s-1 m-1-2 l-1-2 island">
         <h4 class="bold mega">RETURNING CUSTOMER</h4>
@@ -38,7 +38,7 @@
       </div>
     </div>
 
-<h3 class="bold mega island push-none">CHECKOUT</h3>
+    <h3 class="bold mega island push-none">CHECKOUT</h3>
     <div class="grid">
 
       <div class="unit xs-1 s-1 m-1-2 l-1-2 island">
@@ -96,7 +96,7 @@
             ".drop-down-style label": "Province"
           }
         </script>
-    </div>
+      </div>
 
       <div class="unit xs-1 s-1 m-1-2 l-1-2 island">
         <h4 class="bold mega">Payment details</h4>
@@ -126,8 +126,8 @@
                 ".date-picker label": "Expiry Date"
               }
             </script>
-            </div>
-            <div class="unit xs-1 s-1 m-1-2 l-1-2">
+          </div>
+          <div class="unit xs-1 s-1 m-1-2 l-1-2">
             <script type="application/json" data-pattern="forms/number">
               {
                 ".number label": "CVV"
@@ -150,7 +150,6 @@
           <a class="btn kilo bold" href="#">Pay & Proceed</a>
         </div>
 
-        </div>
       </div>
     </div>
 
